--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "dotenv": "^16.4.7",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.1.0",
+    "stripe": "^14.1.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2",
-    "stripe":"^14.1.0"
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "22.10.10",
